# recipe-api/swagger-output.json
@@ -31,6 +31,16 @@
         }
       }
     },
+    "/whoami": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/login": {
       "get": {
         "description": "",
